# motion-tracker-bot

./: .background.cpp.swp  .test.sh.swn  .test.sh.swo  .test.sh.swp  CMakeCache.txt  CMakeLists.txt  Makefile  background.cpp  car-detector  carTracking  cmake_install.cmake  test.sh
config/: BlobTracking.xml  MotionTracker.xml  VehicleCouting.xml  name.xml
data/: 20140609154448904.wmv  20140609154702476.wmv  20140609154811458.wmv  20140609154815264.wmv  cascade.xml  insuergentes.txt  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/: CarTracking.cpp  background.cpp  car_tracker.cpp  detector.cpp  tracker.cpp
src/detector/: VehicleCouting.cpp  VehicleCouting.h
src/motion/: MotionTracker.cpp  MotionTracker.hpp
src/package_bgs/PBAS/: PBAS.h
src/tracker/: BlobTracking.cpp  BlobTracking.hpp
