cmake_minimum_required(VERSION 2.8)
project( car-detector )
find_package( OpenCV  REQUIRED )
find_package( cvBlob  REQUIRED )
add_executable(car-detector  src/car_tracker.cpp src/tracker/BlobTracking.cpp)
target_link_libraries(car-detector ${OpenCV_LIBS} )
target_link_libraries(car-detector ${cvBlob_LIBS})
